# vulpescraft1

./: .gitignore  CMakeLists.txt
libs/cglm/: meson.build
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: main.c
